projet_GOCass/tests/bad/testfile-undefined-function.go
package main

func foo (x int) {}

func main() {foo(2); fooo(5)}
